Require zc.extjsresource 2.0.2-0.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,10 @@
 [buildout]
 develop = .
 parts = test py
+versions = versions
+
+[versions]
+zc.extjsresource = 2.0.2-0
 
 [test]
 recipe = zc.recipe.testrunner
