--- a/versions.cfg
+++ b/versions.cfg
@@ -11,6 +11,7 @@ setuptools = 0.6c9
 simplejson = 1.7.3
 transaction = 1.0a1
 zc.buildout = 1.1.1
+zc.configuration = 1.0
 zc.extjsresource = 2.0.2-1
 zc.form = 0.1.2
 zc.lockfile = 1.0.0
