use actual tag of zc.ajaxform

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,9 @@
 [buildout]
-develop = . zc.ajaxform
+develop = .
 parts = py demo selenium
-allow-picked-versions = false
-use-dependency-links = false
 versions = versions
 extends = versions.cfg
+extensions = zc.buildoutsftp
 
 [py]
 recipe = zc.recipe.egg
