--- a/versions.cfg
+++ b/versions.cfg
@@ -1,16 +1,31 @@
+[buildout]
+find-links =
+    http://download.zope.org/simple
+    sftp://yum.zope.com/shared/z4m5
+    http://yum.zope.com/buildout/
+    sftp://yum.zope.com/private/lovely
+    http://download.zope.org/distribution
+
+allow-picked-versions = false
+use-dependency-links = false
+versions = versions
+
 [versions]
-zc.ajaxform = 0
+zc.ajaxform = 0.1.0
 ClientForm = 0.2.9
 RestrictedPython = 3.4.3
 ZConfig = 2.6.0
 ZODB3 = 3.9.0a10
 docutils = 0.5
 mechanize = 0.1.9
+paramiko = 1.7.4
+pycrypto = 2.0.1
 pytz = 2008i
 setuptools = 0.6c9
 simplejson = 1.7.3
 transaction = 1.0a1
 zc.buildout = 1.1.1
+zc.buildoutsftp = 0.5.0
 zc.configuration = 1.0
 zc.extjsresource = 2.0.2-1
 zc.form = 0.1.2
