add CKEditor widget.

--- a/versions.cfg
+++ b/versions.cfg
@@ -76,8 +76,10 @@ zope.app.wsgi = 3.4.1
 zope.app.zapi = 3.4.0
 zope.app.zcmlfiles = 3.4.3
 zope.app.zopeappgenerations = 3.4.0
+zope.broken = 3.5.0
 zope.cachedescriptors = 3.4.1
 zope.component = 3.5.1
+zope.container = 3.8.1
 zope.configuration = 3.4.0
 zope.contenttype = 3.4.0
 zope.copypastemove = 3.4.0
@@ -89,9 +91,11 @@ zope.dublincore = 3.4.0
 zope.error = 3.5.1
 zope.event = 3.4.0
 zope.exceptions = 3.5.2
+zope.file = 0.5.0
 zope.filerepresentation = 3.4.0
 zope.formlib = 3.4.0
 zope.hookable = 3.4.0
+zope.html = 2.0.0
 zope.i18n = 3.6.0
 zope.i18nmessageid = 3.4.3
 zope.index = 3.4.1
@@ -99,6 +103,7 @@ zope.interface = 3.5.0
 zope.lifecycleevent = 3.4.0
 zope.location = 3.4.0
 zope.minmax = 1.1.0
+zope.mimetype = 1.1.2
 zope.modulealias = 3.4.0
 zope.pagetemplate = 3.4.0
 zope.proxy = 3.4.2
@@ -116,4 +121,3 @@ zope.testbrowser = 3.5.1
 zope.testing = 3.7.1
 zope.thread = 3.4
 zope.traversing = 3.5.0a4
-
