--- a/versions.cfg
+++ b/versions.cfg
@@ -20,10 +20,11 @@ mechanize = 0.1.9
 paramiko = 1.7.4
 pycrypto = 2.0.1
 pytz = 2008i
+rwproperty = 1.0
 setuptools = 0.6c9
 simplejson = 1.7.3
 transaction = 1.0a1
-zc.ajaxform = 0.4.0
+#zc.ajaxform = 0.4.0
 zc.buildout = 1.1.1
 zc.buildoutsftp = 0.5.0
 zc.configuration = 1.0
