--- a/versions.cfg
+++ b/versions.cfg
@@ -8,117 +8,19 @@ find-links =
 
 allow-picked-versions = false
 use-dependency-links = false
+extends = zc.kgs/versions.cfg
 versions = versions
 
 [versions]
-ClientForm = 0.2.9
-RestrictedPython = 3.4.3
-ZConfig = 2.6.0
-ZODB3 = 3.9.0a10
-docutils = 0.5
-mechanize = 0.1.9
-paramiko = 1.7.4
-pycrypto = 2.0.1
-pytz = 2008i
+zc.dojoform =
 rwproperty = 1.0
 setuptools = 0.6c11
-simplejson = 1.7.3
-transaction = 1.0a1
+simplejson = 1.9.1
+transaction = 1.1.0
 zc.ajaxform = 0.7.0
-zc.buildout = 1.1.1
-zc.buildoutsftp = 0.5.0
-zc.configuration = 1.0
-zc.form = 0.1.2
-zc.lockfile = 1.0.0
-zc.recipe.egg = 1.1.0
-zc.recipe.testrunner = 1.1.0
-zc.resourcelibrary = 1.0.1
+zc.buildoutsftp = 0.6.1
+# zc.selenium 1.2.1 works now too,
+# sticking with the one we've been
+# using for now though.
 zc.selenium = 0.1dev-r72479
-zc.sourcefactory = 0.3.4
-zc.zope3recipes = 0.7.0
-zdaemon = 2.0.2
-zodbcode = 3.4.0
-zope.annotation = 3.4.1
-zope.app.applicationcontrol = 3.4.3
-zope.app.appsetup = 3.8.0
-zope.app.authentication = 3.4.3
-zope.app.basicskin = 3.4.0
-zope.app.broken = 3.4.0
-zope.app.catalog = 3.5.1
-zope.app.component = 3.5.0
-zope.app.container = 3.6.2
-zope.app.content = 3.4.0
-zope.app.debug = 3.4.1
-zope.app.dependable = 3.4.0
-zope.app.error = 3.5.1
-zope.app.exception = 3.4.1
-zope.app.folder = 3.4.0
-zope.app.form = 3.6.3
-zope.app.generations = 3.4.1
-zope.app.http = 3.4.1
-zope.app.i18n = 3.4.4
-zope.app.interface = 3.4.0
-zope.app.intid = 3.5.0
-zope.app.keyreference = 3.5.0b2
-zope.app.locales = 3.4.5
-zope.app.pagetemplate = 3.4.1
-zope.app.principalannotation = 3.4.0
-zope.app.publication = 3.5.0
-zope.app.publisher = 3.5.1
-zope.app.renderer = 3.4.0
-zope.app.rotterdam = 3.4.1
-zope.app.schema = 3.4.0
-zope.app.security = 3.5.2
-zope.app.securitypolicy = 3.4.6
-zope.app.server = 3.4.2
-zope.app.session = 3.5.1
-zope.app.testing = 3.5.6
-zope.app.wsgi = 3.4.1
-zope.app.zapi = 3.4.0
-zope.app.zcmlfiles = 3.4.3
-zope.app.zopeappgenerations = 3.4.0
-zope.broken = 3.5.0
-zope.cachedescriptors = 3.4.1
-zope.component = 3.5.1
-zope.container = 3.8.1
-zope.configuration = 3.4.0
-zope.contenttype = 3.4.0
-zope.copypastemove = 3.4.0
-zope.datetime = 3.4.0
-zope.deferredimport = 3.4.0
-zope.deprecation = 3.4.0
-zope.dottedname = 3.4.2
-zope.dublincore = 3.4.0
-zope.error = 3.5.1
-zope.event = 3.4.0
-zope.exceptions = 3.5.2
-zope.file = 0.5.0
-zope.filerepresentation = 3.4.0
-zope.formlib = 3.4.0
-zope.hookable = 3.4.0
-zope.html = 2.0.0
-zope.i18n = 3.6.0
-zope.i18nmessageid = 3.4.3
-zope.index = 3.4.1
-zope.interface = 3.5.0
-zope.lifecycleevent = 3.4.0
-zope.location = 3.4.0
-zope.minmax = 1.1.0
-zope.mimetype = 1.1.2
-zope.modulealias = 3.4.0
-zope.pagetemplate = 3.4.0
-zope.proxy = 3.4.2
-zope.publisher = 3.5.4
-zope.schema = 3.5.0a1
-zope.security = 3.5.2
-zope.securitypolicy = 3.4.1
-zope.server = 3.5.0
-zope.session = 3.7.0
-zope.size = 3.4.0
-zope.structuredtext = 3.4.0
-zope.tal = 3.5.0
-zope.tales = 3.4.0
-zope.testbrowser = 3.5.1
-zope.testing = 3.7.1
-zope.thread = 3.4
-zope.traversing = 3.5.0a4
+z3c.zrtresource = 1.3.0
