consolidate testing dependencies

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,11 +13,7 @@ interpreter = py
 [application]
 recipe = zc.zope3recipes:application
 servers = zserver
-eggs =
-     zc.dojoform
-     zc.ajaxform
-     zope.app.server
-     zc.selenium
+eggs = zc.dojoform [test]
 site.zcml = <include package="zc.dojoform" file="selenium.zcml" />
 
 [demo]
