- use zc.seleniumrc instead of zc.selenium - remove old selenium unit tests - add stub for doc-driven seleniumrc tests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,7 +33,6 @@ zope.conf =
 [selenium]
 recipe = zc.recipe.egg:scripts
 eggs = ${application:eggs}
-script = selenium
-entry-points = selenium=zc.selenium.selenium:main
+entry-points = selenium=zc.seleniumrc.selenium:main
 initialization =
   sys.argv.insert(1, '${demo:run-directory}/zope.conf')
