--- a/versions.cfg
+++ b/versions.cfg
@@ -1,6 +1,7 @@
 [buildout]
 find-links =
     http://download.zope.org/simple
+    sftp://yum.zope.com/private
     sftp://yum.zope.com/shared/z4m5
     http://yum.zope.com/buildout/
     sftp://yum.zope.com/private/lovely
@@ -19,8 +20,5 @@ simplejson = 1.9.1
 transaction = 1.1.0
 zc.ajaxform = 0.7.0
 zc.buildoutsftp = 0.6.1
-# zc.selenium 1.2.1 works now too,
-# sticking with the one we've been
-# using for now though.
-zc.selenium = 0.1dev-r72479
+zc.seleniumrc = 0.1.2
 z3c.zrtresource = 1.3.0
