--- a/versions.cfg
+++ b/versions.cfg
@@ -14,6 +14,7 @@ versions = versions
 
 [versions]
 zc.dojoform =
+manuel = 1.3.0
 rwproperty = 1.0
 setuptools = 0.6c11
 simplejson = 1.9.1
@@ -22,3 +23,4 @@ zc.ajaxform = 0.7.0
 zc.buildoutsftp = 0.6.1
 zc.seleniumrc = 0.1.2
 z3c.zrtresource = 1.3.0
+zope.testrunner = 4.0.0b5
