Converted (new) tests to use selenium rather than spidermonkey&envjs

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,24 @@
 [buildout]
-develop = .
-parts = py demo selenium
+develop = . ../wbs/customdoctest
+parts = py demo selenium dojo test selenium.jar
 versions = versions
 extends = versions.cfg
 extensions = zc.buildoutsftp
 
+
 [py]
 recipe = zc.recipe.egg
-eggs = zc.dojoform
+eggs = zc.dojoform [test]
 interpreter = py
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = zc.dojoform [test]
+
+initialization =
+   import zc.dojoform.tests
+   zc.dojoform.tests.home = '${buildout:directory}'
+
 
 [application]
 recipe = zc.zope3recipes:application
@@ -37,3 +47,37 @@ script = selenium
 entry-points = selenium=zc.selenium.selenium:main
 initialization =
   sys.argv.insert(1, '${demo:run-directory}/zope.conf')
+
+[selenium.jar]
+recipe = gocept.download
+url = http://selenium.googlecode.com/files/selenium-server-standalone-2.0b2.jar
+md5sum = 330a21b2fec2fc81c4d673712cdd4bca
+
+[dojo]
+recipe = gocept.download
+strip-top-level-dir = true
+
+url =
+ http://download.dojotoolkit.org/release-1.5.0/dojo-release-1.5.0-src.tar.gz
+md5sum = 7aaa2ea07d5295c2d7822c98e0085a34
+
+# url =
+#   http://download.dojotoolkit.org/release-1.4.3/dojo-release-1.4.3-src.tar.gz
+# md5sum = e16832c6adad3ebe59a7d59f03861e36
+
+[env.js-dist]
+recipe = gocept.download
+url = http://github.com/thatcher/env-js/tarball/1.2.13
+md5sum = 9b78fbdc4df8d2154289423235d7ddd2
+strip-top-level-dir = true
+
+[envjs]
+recipe = cp.recipe.cmd
+install_cmd =
+   echo ${env.js-dist:location}
+   rm -rf ${buildout:parts-directory}/envjs
+   cd ${buildout:parts-directory}/env.js-dist
+   tar xzf 1.2.13
+   cd t*
+   make
+   cp -r dist ${buildout:parts-directory}/envjs
