--- a/versions.cfg
+++ b/versions.cfg
@@ -24,3 +24,13 @@ zc.buildoutsftp = 0.6.1
 # using for now though.
 zc.selenium = 0.1dev-r72479
 z3c.zrtresource = 1.3.0
+
+gocept.download = 0.9.5
+cp.recipe.cmd = 0.4
+python-spidermonkey = 0.0.10
+manuel = 1.4.1
+zope.testrunner = 4.0.0
+selenium = 2.0b2
+bobo = 0.2.2
+WebOb = 1.0.5
+BeautifulSoup = 3.2.0
