--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
-develop = . ../wbs/customdoctest
-parts = py demo selenium dojo test selenium.jar
+develop = . customdoctest
+parts = py demo selenium dojo test testserver selenium.jar
 versions = versions
 extends = versions.cfg
 extensions = zc.buildoutsftp
@@ -18,6 +18,13 @@ eggs = zc.dojoform [test]
 initialization =
    import zc.dojoform.tests
    zc.dojoform.tests.home = '${buildout:directory}'
+
+[testserver]
+recipe = zc.recipe.egg
+eggs = zc.dojoform [test]
+initialization = ${test:initialization}
+arguments = 9000, False
+entry-points = testserver=zc.dojoform.tests:start_bobo_server
 
 
 [application]
