- tests for actions/handlers

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-develop = . customdoctest
+develop = . customdoctests
 parts = py demo selenium dojo test testserver selenium.jar
 versions = versions
 extends = versions.cfg
