- fix tests (add ckeditor to parts)  - various tweaks  - TODO:    - 1.6 compat    - move ckeditor to ajaxform

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 develop = . customdoctests
-parts = py demo selenium dojo test testserver selenium.jar
+parts = py demo selenium dojo test testserver selenium.jar ckeditor
 versions = versions
 extends = versions.cfg
 extensions = zc.buildoutsftp
@@ -71,6 +71,11 @@ md5sum = 7aaa2ea07d5295c2d7822c98e0085a34
 # url =
 #   http://download.dojotoolkit.org/release-1.4.3/dojo-release-1.4.3-src.tar.gz
 # md5sum = e16832c6adad3ebe59a7d59f03861e36
+
+[ckeditor]
+recipe = gocept.download
+url = http://download.cksource.com/CKEditor/CKEditor/CKEditor%203.5.3/ckeditor_3.5.3.zip
+md5sum = f0eb20f36b3bf91c267a6ffe6cd468b5
 
 [env.js-dist]
 recipe = gocept.download
