--- a/buildout.cfg
+++ b/buildout.cfg
@@ -64,13 +64,20 @@ md5sum = 330a21b2fec2fc81c4d673712cdd4bca
 recipe = gocept.download
 strip-top-level-dir = true
 
-url =
- http://download.dojotoolkit.org/release-1.6.0/dojo-release-1.6.0-src.tar.gz
+# version = 1.4.3
+# md5sum = e16832c6adad3ebe59a7d59f03861e36
+
+# version = 1.5.1
+# md5sum = cdb3ee2635323290a147afb464e8e708
+
+version = 1.6.0
 md5sum = 7f8f801680c75ce9aa503e4f8ab1dad0
 
-# url =
-#   http://download.dojotoolkit.org/release-1.4.3/dojo-release-1.4.3-src.tar.gz
-# md5sum = e16832c6adad3ebe59a7d59f03861e36
+# version = 1.6.1
+# md5sum = ac00e0abbde7ca49758535089b4154c3
+
+base =  http://download.dojotoolkit.org
+url =${:base}/release-${:version}/dojo-release-${:version}-src.tar.gz
 
 [ckeditor]
 recipe = gocept.download
