--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 develop = . customdoctests
-parts = py demo selenium dojo test testserver selenium.jar ckeditor
+parts = py dojo test testserver selenium.jar ckeditor
 versions = versions
 extends = versions.cfg
 extensions = zc.buildoutsftp
@@ -25,35 +25,6 @@ eggs = zc.dojoform [test]
 initialization = ${test:initialization}
 arguments = 9000, False
 entry-points = testserver=zc.dojoform.tests:start_bobo_server
-
-
-[application]
-recipe = zc.zope3recipes:application
-servers = zserver
-eggs = zc.dojoform [test]
-site.zcml = <include package="zc.dojoform" file="selenium.zcml" />
-
-[demo]
-recipe = zc.zope3recipes:instance
-application = application
-zope.conf =
-  devmode on
-  <zodb>
-    <demostorage>
-    </demostorage>
-  </zodb>
-  <server http0>
-    address 39857
-    type WSGI-HTTP
-  </server>
-
-[selenium]
-recipe = zc.recipe.egg:scripts
-eggs = ${application:eggs}
-script = selenium
-entry-points = selenium=zc.selenium.selenium:main
-initialization =
-  sys.argv.insert(1, '${demo:run-directory}/zope.conf')
 
 [selenium.jar]
 recipe = gocept.download
@@ -83,20 +54,3 @@ url =${:base}/release-${:version}/dojo-release-${:version}-src.tar.gz
 recipe = gocept.download
 url = http://download.cksource.com/CKEditor/CKEditor/CKEditor%203.5.3/ckeditor_3.5.3.zip
 md5sum = f0eb20f36b3bf91c267a6ffe6cd468b5
-
-[env.js-dist]
-recipe = gocept.download
-url = http://github.com/thatcher/env-js/tarball/1.2.13
-md5sum = 9b78fbdc4df8d2154289423235d7ddd2
-strip-top-level-dir = true
-
-[envjs]
-recipe = cp.recipe.cmd
-install_cmd =
-   echo ${env.js-dist:location}
-   rm -rf ${buildout:parts-directory}/envjs
-   cd ${buildout:parts-directory}/env.js-dist
-   tar xzf 1.2.13
-   cd t*
-   make
-   cp -r dist ${buildout:parts-directory}/envjs
