use released zc.customdoctests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-develop = . customdoctests
+develop = .
 parts = py dojo test testserver selenium.jar ckeditor
 versions = versions
 extends = versions.cfg
