--- a/versions.cfg
+++ b/versions.cfg
@@ -19,6 +19,7 @@ simplejson = 1.9.1
 transaction = 1.1.0
 zc.ajaxform = 0.7.0
 zc.buildoutsftp = 0.6.1
+zc.customdoctests = 0.1.0
 # zc.selenium 1.2.1 works now too,
 # sticking with the one we've been
 # using for now though.
