The selenium java thing isn't needed. Boy do I feel silly.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 develop = .
-parts = py dojo test testserver selenium.jar ckeditor
+parts = py dojo test testserver ckeditor
 versions = versions
 extends = versions.cfg
 extensions = zc.buildoutsftp
@@ -25,11 +25,6 @@ eggs = zc.dojoform [test]
 initialization = ${test:initialization}
 arguments = 9000, False
 entry-points = testserver=zc.dojoform.tests:start_bobo_server
-
-[selenium.jar]
-recipe = gocept.download
-url = http://selenium.googlecode.com/files/selenium-server-standalone-2.0b2.jar
-md5sum = 330a21b2fec2fc81c4d673712cdd4bca
 
 [dojo]
 recipe = gocept.download
