--- a/versions.cfg
+++ b/versions.cfg
@@ -23,7 +23,7 @@ zc.customdoctests = 0.1.0
 # zc.selenium 1.2.1 works now too,
 # sticking with the one we've been
 # using for now though.
-zc.selenium = 0.1dev-r72479
+zc.selenium = 1.2.1
 z3c.zrtresource = 1.3.0
 
 gocept.download = 0.9.5
@@ -31,7 +31,7 @@ cp.recipe.cmd = 0.4
 python-spidermonkey = 0.0.10
 manuel = 1.4.1
 zope.testrunner = 4.0.0
-selenium = 2.0b2
-bobo = 0.2.2
-WebOb = 1.0.5
+selenium = 2.24.0
+bobo = 1.0.0
+WebOb = 1.2
 BeautifulSoup = 3.2.0
