get the tests running and passing

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -41,6 +41,9 @@ md5sum = 7f8f801680c75ce9aa503e4f8ab1dad0
 # version = 1.6.1
 # md5sum = ac00e0abbde7ca49758535089b4154c3
 
+# version = 1.7.3
+# md5sum = 88fa29e1d5258d9457f424b2e3eb00c7
+
 base =  http://download.dojotoolkit.org
 url =${:base}/release-${:version}/dojo-release-${:version}-src.tar.gz
 
