--- a/versions.cfg
+++ b/versions.cfg
@@ -29,9 +29,10 @@ z3c.zrtresource = 1.3.0
 gocept.download = 0.9.5
 cp.recipe.cmd = 0.4
 python-spidermonkey = 0.0.10
-manuel = 1.4.1
+manuel = 1.6.0
 zope.testrunner = 4.0.0
-selenium = 2.24.0
+selenium = 2.26.0
+six = 1.2.0
 bobo = 1.0.0
-WebOb = 1.2
+WebOb = 1.2.3
 BeautifulSoup = 3.2.0
