test with dojo 1.8.1 and ckeditor 3.6.5

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -41,13 +41,16 @@ strip-top-level-dir = true
 # version = 1.6.1
 # md5sum = ac00e0abbde7ca49758535089b4154c3
 
-version = 1.7.3
-md5sum = 88fa29e1d5258d9457f424b2e3eb00c7
+# version = 1.7.3
+# md5sum = 88fa29e1d5258d9457f424b2e3eb00c7
+
+version = 1.8.1
+md5sum = 9b80b9a736b81c336accd832f3c3aea2
 
 base =  http://download.dojotoolkit.org
 url =${:base}/release-${:version}/dojo-release-${:version}-src.tar.gz
 
 [ckeditor]
 recipe = gocept.download
-url = http://download.cksource.com/CKEditor/CKEditor/CKEditor%203.5.3/ckeditor_3.5.3.zip
-md5sum = f0eb20f36b3bf91c267a6ffe6cd468b5
+url = http://download.cksource.com/CKEditor/CKEditor/CKEditor%203.6.5/ckeditor_3.6.5.zip
+md5sum = 39d526054298ac1162b80fc34a31f760
