--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@ parts = py dojo test testserver ckeditor
 versions = versions
 extends = versions.cfg
 extensions = zc.buildoutsftp
+show-picked-versions = true
 
 [py]
 recipe = zc.recipe.egg
