--- a/versions.cfg
+++ b/versions.cfg
@@ -8,31 +8,57 @@ find-links =
 
 allow-picked-versions = false
 use-dependency-links = false
-extends = zc.kgs/versions.cfg
 versions = versions
 
 [versions]
 zc.dojoform =
-rwproperty = 1.0
-setuptools = 0.6c11
-simplejson = 1.9.1
-transaction = 1.1.0
-zc.ajaxform = 0.7.0
-zc.buildoutsftp = 0.6.1
-zc.customdoctests = 0.1.0
-# zc.selenium 1.2.1 works now too,
-# sticking with the one we've been
-# using for now though.
-zc.selenium = 1.2.1
-z3c.zrtresource = 1.3.0
-
-gocept.download = 0.9.5
-cp.recipe.cmd = 0.4
-python-spidermonkey = 0.0.10
-manuel = 1.7.2
-zope.testrunner = 4.0.0
-selenium = 2.33.0
-six = 1.3.0
+BeautifulSoup = 3.2.1
 bobo = 1.0.0
+gocept.download = 0.9.5
+manuel = 1.7.2
+pycrypto = 2.6
+selenium = 2.33.0
+simplejson = 3.3.0
+zc.buildout = 2.2.0
+zc.buildoutsftp = 0.10.0
+zc.customdoctests = 1.0.1
+zc.recipe.egg = 2.0.0
+zc.recipe.testrunner = 2.0.0
+zope.testing = 4.1.2
+
+# Required by:
+# bobo==1.0.0
 WebOb = 1.2.3
-BeautifulSoup = 3.2.0
+
+# Required by:
+# zc.buildoutsftp==0.10.0
+paramiko = 1.10.1
+
+# Required by:
+# manuel==1.7.2
+# zc.customdoctests==1.0.1
+# zc.dojoform==0
+# zope.exceptions==4.0.6
+# zope.interface==4.0.5
+# zope.testing==4.1.2
+# zope.testrunner==4.4.1
+setuptools = 0.9.8
+
+# Required by:
+# manuel==1.7.2
+# zope.testrunner==4.4.1
+six = 1.3.0
+
+# Required by:
+# zope.testing==4.1.2
+# zope.testrunner==4.4.1
+zope.exceptions = 4.0.6
+
+# Required by:
+# zope.testing==4.1.2
+# zope.testrunner==4.4.1
+zope.interface = 4.0.5
+
+# Required by:
+# zc.recipe.testrunner==2.0.0
+zope.testrunner = 4.4.1
