test with dojo 1.9.1

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -45,8 +45,11 @@ strip-top-level-dir = true
 # version = 1.7.3
 # md5sum = 88fa29e1d5258d9457f424b2e3eb00c7
 
-version = 1.8.1
-md5sum = 9b80b9a736b81c336accd832f3c3aea2
+# version = 1.8.5
+# md5sum = d54bea317bb043745ca1bc221a41e9a8
+
+version = 1.9.1
+md5sum = 21323eaacc97a64ceefdfb6293fd5736
 
 base =  http://download.dojotoolkit.org
 url =${:base}/release-${:version}/dojo-release-${:version}-src.tar.gz
