cleaned up some dependencies

--- a/versions.cfg
+++ b/versions.cfg
@@ -1,14 +1,5 @@
 [buildout]
-find-links =
-    http://download.zope.org/simple
-    sftp://yum.zope.com/shared/z4m5
-    http://yum.zope.com/buildout/
-    sftp://yum.zope.com/private/lovely
-    http://download.zope.org/distribution
-
-allow-picked-versions = false
 use-dependency-links = false
-versions = versions
 
 [versions]
 zc.dojoform =
@@ -16,11 +7,8 @@ BeautifulSoup = 3.2.1
 bobo = 1.0.0
 gocept.download = 0.9.5
 manuel = 1.7.2
-pycrypto = 2.6
 selenium = 2.33.0
-simplejson = 3.3.0
 zc.buildout = 2.2.0
-zc.buildoutsftp = 0.10.0
 zc.customdoctests = 1.0.1
 zc.recipe.egg = 2.0.0
 zc.recipe.testrunner = 2.0.0
@@ -42,7 +30,7 @@ paramiko = 1.10.1
 # zope.interface==4.0.5
 # zope.testing==4.1.2
 # zope.testrunner==4.4.1
-setuptools = 0.9.8
+#setuptools = 0.9.8
 
 # Required by:
 # manuel==1.7.2
@@ -62,3 +50,15 @@ zope.interface = 4.0.5
 # Required by:
 # zc.recipe.testrunner==2.0.0
 zope.testrunner = 4.4.1
+
+# Added by buildout at 2013-07-26 14:11:01.381726
+
+# Required by:
+# manuel==1.7.2
+# zc.customdoctests==1.0.1
+# zc.dojoform==0
+# zope.exceptions==4.0.6
+# zope.interface==4.0.5
+# zope.testing==4.1.2
+# zope.testrunner==4.4.1
+setuptools = 0.9.8
