--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,8 +3,8 @@ develop = .
 parts = py dojo test testserver ckeditor
 versions = versions
 extends = versions.cfg
+extensions = zc.buildoutsftp
 show-picked-versions = true
-update-versions-file = versions.cfg
 
 [py]
 recipe = zc.recipe.egg
