Updated to work with wsgidriver and htmlchecker

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,58 +1,30 @@
 [buildout]
 develop = .
-parts = py dojo test testserver ckeditor
+parts = py testserver ckeditor
 versions = versions
 extends = versions.cfg
 show-picked-versions = true
 update-versions-file = versions.cfg
-
-[py]
-recipe = zc.recipe.egg
-eggs = zc.dojoform [test]
-interpreter = py
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = zc.dojoform [test]
 
 initialization =
-   import zc.dojoform.tests
-   zc.dojoform.tests.home = '${buildout:directory}'
+  import zc.wsgidriver
+  zc.wsgidriver.get_factory_argument()
+  zc.wsgidriver.remote_name = "zc.dojoform"
+
+[py]
+recipe = zc.recipe.egg
+eggs = ${test:eggs}
+interpreter = py
 
 [testserver]
 recipe = zc.recipe.egg
 eggs = zc.dojoform [test]
-initialization = ${test:initialization}
-arguments = 9000, False
-entry-points = testserver=zc.dojoform.tests:start_bobo_server
-
-[dojo]
-recipe = gocept.download
-strip-top-level-dir = true
-
-# version = 1.4.3
-# md5sum = e16832c6adad3ebe59a7d59f03861e36
-
-# version = 1.5.1
-# md5sum = cdb3ee2635323290a147afb464e8e708
-
-#version = 1.6.0
-#md5sum = 7f8f801680c75ce9aa503e4f8ab1dad0
-
-# version = 1.6.1
-# md5sum = ac00e0abbde7ca49758535089b4154c3
-
-# version = 1.7.3
-# md5sum = 88fa29e1d5258d9457f424b2e3eb00c7
-
-# version = 1.8.5
-# md5sum = d54bea317bb043745ca1bc221a41e9a8
-
-version = 1.9.1
-md5sum = 21323eaacc97a64ceefdfb6293fd5736
-
-base =  http://download.dojotoolkit.org
-url =${:base}/release-${:version}/dojo-release-${:version}-src.tar.gz
+arguments = 9000, None
+entry-points = testserver=zc.dojoform.tests:start_server
 
 [ckeditor]
 recipe = gocept.download
