--- a/versions.cfg
+++ b/versions.cfg
@@ -50,3 +50,11 @@ zope.interface = 4.0.5
 # Required by:
 # zc.recipe.testrunner==2.0.0
 zope.testrunner = 4.4.1
+
+# Added by buildout at 2013-08-27 16:50:55.000714
+beautifulsoup4 = 4.3.1
+zc.htmlchecker = 0
+zc.wsgidriver = 0
+
+# Added by buildout at 2013-08-27 17:57:01.402588
+html5lib = 0.95
